deployment/base/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workload-test
  labels:
    name: workload-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: bookinfo-details
      containers:
      - name: details
        image: 847868761369.dkr.ecr.eu-west-1.amazonaws.com/application-example:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1000
