deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app: details
    service: details
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: details
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-service
spec:
  hosts:
  - "*"
  gateways:
  - default/ingress
  http:
  - match:
    - uri:
        exact: /weatherforecast
    - uri:
        exact: /healthcheck
    route:
    - destination:
        host: details.workload-test.svc.cluster.local
        port:
          number: 8080
